Changed the background color for ControlPanelNode
2/23/11 #2753, moved color to PhetColorScheme
2/23/2011 Changed measuring tape cross hair color from red to Color( 255, 85, 0 ) to improve color blind support, see #2753
2/15/11 Moved WavelengthControl and TestWavelengthControl to piccolo-phet
Added JComboBox to the list of ignored types in ControlPanelNode.transparifySwing
Added the ability to change units in the measuring tape
Made it possible to specify colors in FloatingClockControlNode
Fixed: Gravity and Orbits string appears in FloatingClockControlNode
Made the time readout and reset button optional in FloatingClockControlNode
1/24/2011 #2678, fix RulerNode so that it's not doing odd things to its bounds
1/24/2011 Added getters and setters to Time Speed Slider classes
1-4-2011: rounded the corners of the measuring tape image
1-4-2011: fixed ButtonNode padding to be constant instead of dependent on the size of text
12-15-2010: measuring tape: Made image resource name public and minor change to usage of constructor arg
12-15-2010: Fixed transparency of measuring tape gif corners
12-15-2010: Added the ability to set the measuring tape stroke color, for support against black backgrounds
12-10-2010: For rulers with no insets (i.e. where the first tick appears at the edge of the ruler), don't show the first and last major tick labels, and only show the units label after the first visible major tick label, resolves #2604
12-8-2010: Made it possible to set the first tick mark of the ruler to appear at its edge, see #2604
11-2-2010: Added support for showing a disabled AbstractMediaButton on a black background
5-21-2010: Fixed constructor arg name in ShadowHTMLNode, resolves #2368
3-23-2010: Disable fractional metrics rendering hint which was causing rendering artifacts, resolves #2178
10-20-2009: Change RegisterablePNode exception handling to support Piccolo 1.3, no big change in functionality